# CatchAll

./: .gitignore  README.md
client/: main.py  pyproject.toml  requirements.txt
client/catchall/: __init__.py  api.py  auth.py  catchall.db  feed.py  flaskapp.db  flaskapp.db.bk  install.py  livefeed.py  models.py  utils.py
client/catchall/static/css/: mdb.css  mdb.min.css  style.css
client/catchall/static/css/addons-pro/: stepper.css  stepper.min.css
client/catchall/static/js/: install.js
client/catchall/templates/: base.html  feed.html  header.html  index.html  install.html  login.html
client/instance/: config.py  config.py.default
client/tests/: test_catchall.py
server/: main.py  pyproject.toml
server/catchall/: faceserver.py  faceworker.py
