[tool.poetry]
name = "catchall"
version = "0.1.0"
description = ""
authors = ["Samuel Stubbings"]

[tool.poetry.dependencies]
python = "^3.6"
certifi = "^2019.11.28"
cffi = "^1.13.2"
chardet = "^3.0.4"
Click = "^7.0"
cryptography = "^2.8"
Flask = "^1.1.1"
Flask-HTTPAuth = "^3.3.0"
Flask-Login = "^0.4.1"
Flask-Script = "^2.0.6"
Flask-SQLAlchemy = "^2.4.1"
Flask-WTF = "^0.14.2"
idna = "^2.8"
imutils = "^0.5.3"
itsdangerous = "^1.1.0"
Jinja2 = "^2.10.3"
MarkupSafe = "^1.1.1"
netifaces = "^0.10.9"
notify-run = "^0.0.13"
numpy = "^1.18.0"
opencv-python = "^4.1.2"
packaging = "^19.2"
passlib = "^1.7.2"
pbkdf2 = "^1.3"
Pillow = "^7.0.0"
psutil = "^5.6.7"
PyAccessPoint = "^0.2.5"
pycparser = "^2.19"
pyparsing = "^2.4.6"
PyQRCode = "^1.2.1"
requests = "^2.22.0"
six = "^1.13.0"
SQLAlchemy = "^1.3.12"
urllib3 = "^1.25.7"
Werkzeug = "^0.16.0"
wifi = "^0.3.8"
wireless = "^0.3.3"
WTForms = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
